--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.25.4",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "svix": "^1.71.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
