--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "svix": "^1.71.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vercel": "^46.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
